--- a/Login/Login/Login.csproj
+++ b/Login/Login/Login.csproj
@@ -53,12 +53,19 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="changePass_page.xaml.cs">
+      <DependentUpon>changePass_page.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="home_page.xaml.cs">
+      <DependentUpon>home_page.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="login_inerface.cs" />
+    <Compile Include="login_page.xaml.cs">
+      <DependentUpon>login_page.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Test\IInsertView.cs" />
     <Compile Include="Test\SecondaryWindow.xaml.cs">
       <DependentUpon>SecondaryWindow.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="signup_page.xaml.cs">
-      <DependentUpon>signup_page.xaml</DependentUpon>
     </Compile>
     <Compile Include="Test\View1.xaml.cs">
       <DependentUpon>View1.xaml</DependentUpon>
@@ -66,7 +73,15 @@
     <Compile Include="Test\View2.xaml.cs">
       <DependentUpon>View2.xaml</DependentUpon>
     </Compile>
-    <Page Include="Login_page.xaml">
+    <Page Include="changePass_page.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="home_page.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="login_page.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -78,18 +93,11 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Login_page.xaml.cs">
-      <DependentUpon>Login_page.xaml</DependentUpon>
-    </Compile>
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
     <Page Include="Test\SecondaryWindow.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="signup_page.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
